// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`columnBreakBefore renders 0 1`] = `
Array [
  .c0 {
  -webkit-column-break-before: 0;
  column-break-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: 0;
  column-break-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: 0;
  column-break-before: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: 0;
  column-break-before: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`columnBreakBefore renders function 1`] = `
Array [
  .c0 {
  -webkit-column-break-before: hasnot;
  column-break-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: has;
  column-break-before: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: hasnot;
  column-break-before: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: has;
  column-break-before: has;
}

<div
    className="c0"
  />,
]
`;

exports[`columnBreakBefore renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-column-break-before: invalid.path.1;
  column-break-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: invalid.path.1;
  column-break-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: invalid.path.1;
  column-break-before: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: invalid.path.1;
  column-break-before: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`columnBreakBefore renders negative number 1`] = `
Array [
  .c0 {
  -webkit-column-break-before: -54881;
  column-break-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: -54881;
  column-break-before: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: -42365;
  column-break-before: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: -42365;
  column-break-before: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`columnBreakBefore renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-column-break-before: July;
  column-break-before: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: September;
    column-break-before: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: July;
  column-break-before: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: September;
    column-break-before: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: January;
  column-break-before: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: December;
    column-break-before: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: April;
    column-break-before: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: May;
    column-break-before: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-break-before: June;
    column-break-before: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: January;
  column-break-before: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: December;
    column-break-before: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: April;
    column-break-before: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: May;
    column-break-before: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-break-before: June;
    column-break-before: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnBreakBefore renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: July;
    column-break-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: September;
    column-break-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: July;
    column-break-before: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: September;
    column-break-before: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: May;
    column-break-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: June;
    column-break-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: April;
    column-break-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: May;
    column-break-before: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: June;
    column-break-before: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-break-before: April;
    column-break-before: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnBreakBefore renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-column-break-before: July;
  column-break-before: July;
}

@media May {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: September;
    column-break-before: September;
  }
}

@media January {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media June {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: July;
  column-break-before: July;
}

@media May {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: September;
    column-break-before: September;
  }
}

@media January {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media June {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: April;
  column-break-before: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: January;
    column-break-before: January;
  }
}

@media January {
  .c0 {
    -webkit-column-break-before: December;
    column-break-before: December;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: April;
    column-break-before: April;
  }
}

@media June {
  .c0 {
    -webkit-column-break-before: May;
    column-break-before: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: April;
  column-break-before: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: January;
    column-break-before: January;
  }
}

@media January {
  .c0 {
    -webkit-column-break-before: December;
    column-break-before: December;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: April;
    column-break-before: April;
  }
}

@media June {
  .c0 {
    -webkit-column-break-before: May;
    column-break-before: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnBreakBefore renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-column-break-before: July;
    column-break-before: July;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media January {
  .c0 {
    -webkit-column-break-before: September;
    column-break-before: September;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

@media June {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-column-break-before: July;
    column-break-before: July;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media January {
  .c0 {
    -webkit-column-break-before: September;
    column-break-before: September;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: November;
    column-break-before: November;
  }
}

@media June {
  .c0 {
    -webkit-column-break-before: August;
    column-break-before: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-break-before: January;
    column-break-before: January;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: December;
    column-break-before: December;
  }
}

@media January {
  .c0 {
    -webkit-column-break-before: April;
    column-break-before: April;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: May;
    column-break-before: May;
  }
}

@media June {
  .c0 {
    -webkit-column-break-before: June;
    column-break-before: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-break-before: January;
    column-break-before: January;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: December;
    column-break-before: December;
  }
}

@media January {
  .c0 {
    -webkit-column-break-before: April;
    column-break-before: April;
  }
}

@media April {
  .c0 {
    -webkit-column-break-before: May;
    column-break-before: May;
  }
}

@media June {
  .c0 {
    -webkit-column-break-before: June;
    column-break-before: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnBreakBefore renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-column-break-before: 54881;
  column-break-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: 54881;
  column-break-before: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: 42365;
  column-break-before: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: 42365;
  column-break-before: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`columnBreakBefore renders string 1`] = `
Array [
  .c0 {
  -webkit-column-break-before: July;
  column-break-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: July;
  column-break-before: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: June;
  column-break-before: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: June;
  column-break-before: June;
}

<div
    className="c0"
  />,
]
`;

exports[`columnBreakBefore renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`columnBreakBefore renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-column-break-before: DarkSlateBlue;
  column-break-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: DarkSlateBlue;
  column-break-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: DarkSlateBlue;
  column-break-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-break-before: DarkSlateBlue;
  column-break-before: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
